fix like bug in user page and theme panel on mobile

--- a/frontend/src/components/PostItem.css
+++ b/frontend/src/components/PostItem.css
@@ -10,6 +10,11 @@
     cursor: pointer;
 }
 
+.post-list-item,
+.button {
+    -webkit-tap-highlight-color: transparent;
+}
+
 .post-list-item.has-thread {
     border-bottom: none;
 }
